crates/pixi-build-cmake/src/snapshots/pixi_build_cmake__tests__cxx_is_in_build_requirements.snap
---
source: crates/pixi-build-cmake/src/main.rs
expression: generated_recipe.recipe
---
context: {}
package:
  name: foobar
  version: 0.1.0
source: []
build:
  number: ~
  script: "[ ... script ... ]"
requirements:
  build:
    - "${{ compiler('cxx') }}"
    - cmake
    - ninja
  host: []
  run:
    - boltons
  run_constraints: []
tests: []
about:
  homepage: ~
  license: ~
  license_file: ~
  summary: ~
  description: ~
  documentation: ~
  repository: ~
extra: ~
