crates/pixi-build-cmake/src/snapshots/pixi_build_cmake__tests__env_vars_are_set.snap
---
source: crates/pixi-build-cmake/src/main.rs
expression: generated_recipe.recipe.build.script
---
content: "[ ... script ... ]"
env:
  foo: bar
secrets: []
