crates/pixi-build-cmake/src/snapshots/pixi_build_cmake__tests__has_python_is_set_in_build_script.snap
---
source: crates/pixi-build-cmake/src/main.rs
expression: generated_recipe.recipe.build
---
number: ~
script:
  content: "[content]"
  env: {}
  secrets: []
