crates/pixi-build-cmake/src/snapshots/pixi_build_cmake__tests__input_globs_includes_extra_globs.snap
---
source: crates/pixi-build-cmake/src/main.rs
expression: result
---
Ok(
    {
        "**/*.{c,cc,cxx,cpp,h,hpp,hxx}",
        "**/*.{cmake,cmake.in}",
        "**/CMakeFiles.txt",
        "custom/*.c",
    },
)
